fixing horizontal scroll problem on title page

--- a/css/warhorn-classics.css
+++ b/css/warhorn-classics.css
@@ -135,6 +135,11 @@ section#section-.normal {
     box-shadow: inset 0 0 10px 10px #1aa9ab;
 }
 
+.with-summary #header {
+    width: calc(100vw - 300px);
+    left: calc(-50vw + 50% + 150px);
+}
+
 .color-theme-1 #header { /* sepia title header */
     background-image: url("../images/title-background-sepia.png");
     background-color: #877f6a;
